--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -16,6 +16,18 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
+    @media (max-width: 767.98px) {
+      width: 97%;
+    }
+
+    @media (max-width: 505px) {
+      width: 96%;
+    }
+
+    @media (max-width: 380px) {
+      width: 95%;
+    }
   }
 }
 
